fine-tuning sass

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="container">
       <div class="small text-center text-light">
         <h4>Impressum</h4>
-        <p>
+        <p class="mb-0">
           Institut für Humangeographie<br />
           Goethe-Universität Frankfurt<br />
           60629 Frankfurt am Main
