--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h4 class="timeline-title">Call for papers</h4>
               </div>
               <div class="timeline-body">
-                <p>December 2020 – März 2021</p>
+                <p>Dezember 2020 – März 2021</p>
               </div>
             </div>
           </div>
