change email back

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="row">
         <div class="col-md-3 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="mailto:helpdesk@dkg2021.de">helpdesk@dkg2021.de</a>
+          <a class="d-block" href="mailto:kontakt@dkg2021.de">kontakt@dkg2021.de</a>
         </div>
         <div class="col-md-3 mr-auto text-center">
           <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
