--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ title: Deutscher Kongress für Geographie
           <p class="mb-0">Der 62. Deutsche Kongress für Geographie findet</p>
           <p class="date mb-0 bg-light text-secondary">vom <span class="text-primary">29.&nbsp;September</span> bis zum <span class="text-primary">2.&nbsp;Oktober&nbsp;2021</span></p>
           <p class="mb-5">in Frankfurt am Main statt.</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#kongress">Mehr infos</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger mr-4" href="#kongress">Mehr lesen</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#covid-19">Aktuelle Infos zu COVID-19</a>
         </div>
       </div>
     </div>
