--- a/_features/termine.html
+++ b/_features/termine.html
@@ -3,18 +3,18 @@ title: Voraussichtlicher Zeitplan
 items:
   - heading: Call for Sessions
     icon:    clipboard
-    body:    Oktober – Dezember 2020
+    body:    Oktober – Dezember 2022
   - heading: Call for Papers
-    body:    Januar – März 2021
+    body:    Januar – März 2022
     icon:    paper-plane
   - heading: Early-bird registration
-    body:    April – Juli 2021
+    body:    April – Juli 2023
     icon:    kiwi-bird
   - heading: Vorläufiges Programm
-    body:    Juli 2021
+    body:    Juli 2023
     icon:    book-open
   - heading: Tagung in Frankfurt
-    body:    29.&nbsp;September – 2.&nbsp;Oktober&nbsp;2021
+    body:    19.-23.&nbsp;September 2023
     icon:    door-open
 
 ---
