--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@ title: Deutscher Kongress für Geographie
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="display-2">Save the date.</h1>
+          <h1 class="display-2">Verschoben</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="mb-0">Der 62. Deutsche Kongress für Geographie findet</p>
-          <p class="date mb-0 bg-light text-secondary">vom <span class="text-primary">29.&nbsp;September</span> bis zum <span class="text-primary">2.&nbsp;Oktober&nbsp;2021</span></p>
+            <p class="date mb-0 bg-light text-primary">am 19.-23.&nbsp;September&nbsp;2023</p>
           <p class="mb-5">in Frankfurt am Main statt.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger mr-4" href="#kongress">Mehr lesen</a>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#covid-19">Aktuelle Infos zu COVID-19</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#aktuelles">Aktuelles</a>
         </div>
       </div>
     </div>
