--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Deutscher Kongress für Geographie
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="mb-0">Der 62. Deutsche Kongress für Geographie findet</p>
-            <p class="date mb-0 bg-light text-primary">am 19.-23.&nbsp;September&nbsp;2023*</p>
+            <p class="date mb-0 bg-light text-primary">am 19.-23.&nbsp;September&nbsp;2023</p>
           <p class="mb-5">in Frankfurt am Main statt.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger mr-4" href="#kongress">Mehr lesen</a>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#aktuelles">Aktuelles</a>
