--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Deutscher Kongress für Geographie
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="display-2">Verschoben.</h1>
+          <h1 class="display-2">DKG 2023</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
